# pysammwr

./: .gitignore  README.md  pyproject.toml  setup.py
debian/: control.tmpl  postinst
docs/: CIM_OperatingSystem_schema.xml  StdRegProv.xml  Win32_ComputerSystem.xml  Win32_LogicalDisk-2.xml  Win32_LogicalDisk-3.xml  Win32_LogicalDisk.xml  Win32_NTLogEvent_schema.xml  Win32_OperatingSystem-2.xml  Win32_OperatingSystem.xml  all_classes.txt  cim_class_schema.xml  cim_class_schema3  probeCPUusage.py  schema_query.txt
docs/examples/: commands.json  query_for_namespaces.py  windows.json
docs/xmldata/: CIM_LogicalElement_schema.xml  CIM_ManagedSystemElement_schema.xml  Win32_LogicalDisk_schema.xml  Win32_NetworkAdapterConfiguration.xml  Win32_OperatingSystem_schema.xml  Win32_Process_schema.xml  Win32_Service.xml  cim_class_schema2.xml  cimerror.xml  cimquery.xml  class_list.txt  delete_scheduled_task.xml  taskschema.xml  taskschema2.xml  wql.xml  wsman.xsd.xml
pysammwr/: protocol.py
sammwr/: __init__.py  certificates.py  cimclient.py  ciminstance.py  cimschema.py  error.py  event.py  fascerts.py  posh.py  protocol.py  registry.py  scheduledtasks.py  shell.py  utils.py  winrmcommand.py  wmi.py  wsmprotocol.py
test/: test.ps1
